src/styles/markdown/inline-editor.css
.mandala-inline-editor {
    width: 100%;
    height: auto;
    min-height: 100px;
    min-width: 0;
    display: flex;
    flex-direction: column;

    & .markdown-source-view,
    & .view-content,
    & .cm-editor,
    & .cm-editor .cm-scroller {
        width: 100%;
        min-width: 0;
        box-sizing: border-box;
    }

    & .view-header,
    & .inline-title,
    & .embedded-backlinks,
    & .cm-gutters {
        display: none !important;
    }

    & .cm-editor,
    & .cm-content,
    & .cm-line {
        font-size: calc(var(--font-text-size, 16px) + var(--local-font-size-offset, 0px)) !important;
        line-height: var(--mandala-editor-line-height, 1.4) !important;
    }

    & .cm-editor .cm-scroller {
        padding: var(--mandala-editor-padding-y, 6px)
            var(--mandala-idle-scrollbar-size, 6px) !important;
        padding-bottom: var(--mandala-editor-padding-bottom, 20px) !important;
        padding-left: var(--mandala-idle-scrollbar-size, 6px) !important;
    }

    & .cm-contentContainer div {
        padding-bottom: 0 !important;
    }

    --file-line-width: 100%;
}

/* 移动端全屏模式下的编辑器特殊调整 */
:global(.is-mobile) .is-floating-mobile .mandala-inline-editor {
    height: 100% !important;
    min-height: calc(100vh - 100px) !important;
    background-color: var(--background-primary);
}

:global(.is-mobile) .is-floating-mobile .editor-container {
    height: 100% !important;
}

